# -*- mode: org -*-
* v4.1.1    UNRELEASED

- Avoid unnecessary work when ~auto-revert-remote-files~ is ~nil~.  #5222

- Improved default choice offered by ~magit-branch-reset~ and
  ~magit-reset-*~.  #5230

Bug fixes:

- Added a workaround for a regression in Git v2.46.0.  #5212

- Section-specific bindings were removed when a section was expanded
  whose body is not inserted until the expansion takes place.
  9395de2c94

- Addressed an incompatibility with Eglot.  #5226

- Adapted to a change in ~define-globalized-minor-mode~ in Emacs 30,
  which caused ~diff-hl-mode~ to be enabled in blob buffers.  #5229

* v4.1.0    2024-09-01

- The library ~git-commit.el~ is no longer distributed as a separate
  package, ~git-commit~, but as part of the ~magit~ package.

- Improved ~magit-tag-release~'s consistency and handling of arguments.
  #5102

- Updated tooling and other housekeeping.

Bug fixes:

- Only use an explicit range in ~magit-insert-recent-commits~, when also
  using ~--graph~.  With ~--graph~ it increases performance noticeably,
  but without it decreases performance somewhat.  #5075

- ~magit-completing-read-multiple~ now shows the default choice in the
  prompt, if a completion framework is used, for which that is useful.
  #5205.

* Older releases

See ~docs/RelNotes/~.