@@ -2603,15 +2603,16 @@ and this option only controls what face is used.")
 (defun magit--minibuf-default-add-commit ()
   (let ((fn minibuffer-default-add-function))
     (lambda ()
-      (if-let ((commit (with-selected-window (minibuffer-selected-window)
-                         (or (magit-thing-at-point 'git-revision-range t)
-                             (magit-commit-at-point)))))
-          (let ((rest (cons commit (delete commit (funcall fn))))
-                (def minibuffer-default))
-            (if (listp def)
-                (append def rest)
-              (cons def (delete def rest))))
-        (funcall fn)))))
+      (let ((rest (and (functionp fn) (funcall fn))))
+        (if-let ((commit (with-selected-window (minibuffer-selected-window)
+                           (or (magit-thing-at-point 'git-revision-range t)
+                               (magit-commit-at-point)))))
+            (let ((rest (cons commit (delete commit rest)))
+                  (def minibuffer-default))
+              (if (listp def)
+                  (append def rest)
+                (cons def (delete def rest))))
+          rest)))))
 
 (defun magit-read-branch (prompt &optional secondary-default)
   (magit-completing-read prompt (magit-list-branch-names)
